Alighn the bottom to the left

--- a/themes/classic.css
+++ b/themes/classic.css
@@ -264,7 +264,7 @@
     color:white;
     font-weight:bold;
     font-size:18px;
-    text-align:right;
+    text-align:left;
 }
 
 #abundaCalcTbl tfoot th a {
