--- a/themes/classic.css
+++ b/themes/classic.css
@@ -1,150 +1,171 @@
-﻿.calc_content_wrap {
-
-	width: 100%;
-	margin:0 auto;
-	padding: 4px;
-	z-index: 1; color: #ffffff;
-	text-align: left;
-    	font-weight: bold;
-    	font-size: 18px;
-    	clear:none;
+﻿.calc_content_wrap
+{
+    width: 100%;
+    margin: 0 auto;
+    padding: 4px;
+    z-index: 1;
+    color: #ffffff;
+    text-align: left;
+    font-weight: bold;
+    font-size: 18px;
+    clear: none;
 }
 
 
-.orange_bg{background:#257A01;}
-.green_bg{background:#0b5294;}
+.orange_bg
+{
+    background: #257A01;
+}
+.green_bg
+{
+    background: #0b5294;
+}
 
-#second_content {
+#second_content
+{
     margin: 5px 0 0 0;
     float: left;
-    width:99%;
+    width: 99%;
     -moz-border-radius: 20px;
     -webkit-border-radius: 20px;
     -khtml-border-radius: 20px;
     border-radius: 20px;
 }
 
-.second_content_sec1 
+.second_content_sec1
 {
-    width:200px;
-    margin:10px 0 0 12px;
-    padding:7px;
-    float:left;
-    clear:none;
-    font-size:18px;
-    color:White;
+    width: 200px;
+    margin: 10px 0 0 12px;
+    padding: 7px;
+    float: left;
+    clear: none;
+    font-size: 18px;
+    color: White;
 }
 
 .second_content_sec2
 {
-    width:280px;
-    margin-top:10px;
-    padding:7px 0 7px 7px;
-    float:left;
-    clear:none;
-    font-size:18px;
-    color:White;
+    width: 280px;
+    margin-top: 10px;
+    padding: 7px 0 7px 7px;
+    float: left;
+    clear: none;
+    font-size: 18px;
+    color: White;
 }
 
 .second_content_sec3
 {
-    width:188px;
-    margin:3px 18px 0 0;
-    padding:7px 0;
-    float:right;
-    clear:none;
-    font-size:18px;
-    color:White;
+    width: 188px;
+    margin: 3px 18px 0 0;
+    padding: 7px 0;
+    float: right;
+    clear: none;
+    font-size: 18px;
+    color: White;
     z-index: 1;
 }
 
-#submitList 
+#submitList
 {
     margin-left: 25px;
-    clear:none;
+    clear: none;
 }
 
-.second_content_sec1 label 
+.second_content_sec1 label
 {
-    width:120px;
+    width: 120px;
     float: left;
-	clear:none;
-	margin:0;
-	padding:0;
+    clear: none;
+    margin: 0;
+    padding: 0;
 }
 
 .second_content_sec2 div
 {
     float: left;
-    border:0;
-    clear:none;
+    border: 0;
+    clear: none;
 }
 
 
-.second_content_sec3 img 
+.second_content_sec3 img
 {
     float: right;
-    border:0;
-    clear:none;
+    border: 0;
+    clear: none;
 }
 
 .second_content_sec2 label
 {
-    width:200px;
+    width: 200px;
     float: left;
-	clear:none;
-	margin:0;
-	padding:0;
+    clear: none;
+    margin: 0;
+    padding: 0;
 }
 
-.second_content_sec1 div {
-	clear:none;
+.second_content_sec1 div
+{
+    clear: none;
 }
 
-#abundaInput {
-	margin: 0;
-	clear: none;
+#abundaInput
+{
+    margin: 0;
+    clear: none;
 }
 
 #top_input_section
- {
-    margin:0;
-    float:left;
+{
+    margin: 0;
+    float: left;
     width: 99%;
     clear: none;
     -moz-border-radius: 20px;
     -webkit-border-radius: 20px;
     -khtml-border-radius: 20px;
     border-radius: 20px;
- }
+}
 
 #top_input_section div.input_container
 {
-    height: 40px; margin: 5px 5px 15px 15px; float:left; padding-top:11px; clear: none; width:auto;
+    height: 40px;
+    margin: 5px 5px 15px 15px;
+    float: left;
+    padding-top: 11px;
+    clear: none;
+    width: auto;
 }
 
-#abundatrade {
-	position:relative;
-	display:block;
-	width:90%;
-	height: auto;
-	margin:auto;
+#abundatrade
+{
+    position: relative;
+    display: block;
+    width: 90%;
+    height: auto;
+    margin: auto;
 }
 
-#top_input_section div.label{float:left; margin: 5px 6px 0 0; clear:none; }
+#top_input_section div.label
+{
+    float: left;
+    margin: 5px 6px 0 0;
+    clear: none;
+}
 
 #top_input_section div.input_container div.product_holder
- {
-    width:162px;
-    height:32px;
-    float:left;
+{
+    width: 162px;
+    height: 32px;
+    float: left;
     margin-right: 12px;
     z-index: 1;
     margin: 0;
-    padding:0;
-    display:block;
-    clear:none;
- }
+    padding: 0;
+    display: block;
+    clear: none;
+}
 
 #top_input_section div.product_holder #product_code
 {
@@ -155,7 +176,7 @@
     margin-top: 7px;
     width: 140px;
     z-index: 1;
-    clear:none;
+    clear: none;
     -moz-border-radius: 100px;
     -webkit-border-radius: 100px;
     -khtml-border-radius: 100px;
@@ -164,25 +185,25 @@
 
 
 #top_input_section div.input_container div.qty_holder
- {
-    width:66px;
-    height:32px;
-    float:left;
+{
+    width: 66px;
+    height: 32px;
+    float: left;
     top: 5px;
     margin-left: 6px;
     z-index: 1;
-    clear:none;
- }
+    clear: none;
+}
 
 #top_input_section div.qty_holder #product_qty
 {
     background: white;
     border: none;
-    width:60px;
-    height:32px;
-    margin-top:7px;
-    margin-left:10px;
-    clear:none;
+    width: 60px;
+    height: 32px;
+    margin-top: 7px;
+    margin-left: 10px;
+    clear: none;
     -moz-border-radius: 100px;
     -webkit-border-radius: 100px;
     -khtml-border-radius: 100px;
@@ -190,163 +211,176 @@
 }
 
 
-#top_input_section  div.submit_holder
- {
-    float:right;
+#top_input_section div.submit_holder
+{
+    float: right;
     width: 140px;
     height: 40px;
-    margin: 5px 15px 15px 5px; padding-top:11px;
-    clear:none;
- }
- 
- #top_input_section .submit
- {
-     border:none;
-     background: url("../images/additem.jpg") no-repeat;
-     width: 123px;
-     height: 37px;
-     cursor: pointer;
-     margin:0 12px 0 0;
-     padding:0;float:right;
-     clear:none;
- }
- 
- #top_input_section .submit:hover
- {
-     background: url("../images/additem1.jpg") no-repeat;
-     clear: none;
- }
-
-#abundaCalcTbl 
-{
-    width:100%;
-    margin-bottom:18px;
-    margin-top: 8px;
-    margin-left: 3px;
-    clear:none;
-    
-    float:left;
+    margin: 5px 15px 15px 5px;
+    padding-top: 11px;
+    clear: none;
 }
 
-#abundaCalcTbl tbody tr 
+#top_input_section .submit
 {
-    background:#ffffff;
+    border: none;
+    background: url("../images/additem.jpg") no-repeat;
+    width: 123px;
+    height: 37px;
+    cursor: pointer;
+    margin: 0 12px 0 0;
+    padding: 0;
+    float: right;
+    clear: none;
+}
+
+#top_input_section .submit:hover
+{
+    background: url("../images/additem1.jpg") no-repeat;
+    clear: none;
+}
+
+#abundaCalcTbl
+{
+    width: 100%;
+    margin-bottom: 18px;
+    margin-top: 8px;
+    margin-left: 3px;
+    clear: none;
+    float: left;
+}
+
+#abundaCalcTbl tbody tr
+{
+    background: #ffffff;
 }
 
 .td_image
 {
     float: left;
-    width:38%;
-	height:98%;
+    width: 38%;
+    height: 98%;
 }
 
-.td_details {
-	float:right;
-	width:60%;
-	height:98%;
+.td_details
+{
+    float: right;
+    width: 60%;
+    height: 98%;
 }
 
-#abundaCalcTbl tbody {
-	max-height:400px;
+#abundaCalcTbl tbody
+{
+    max-height: 400px;
 }
 
-#abundaCalcTbl tbody td {
-	border-right: 1px solid silver;
-	border-bottom: 1px solid silver;
-	padding: 3px 2px 2px 3px;
-	color:Black;
-	font-size:14px;
-	text-align:center;
-	vertical-align: top;
+#abundaCalcTbl tbody td
+{
+    border-right: 1px solid silver;
+    border-bottom: 1px solid silver;
+    padding: 3px 2px 2px 3px;
+    color: Black;
+    font-size: 14px;
+    text-align: center;
+    vertical-align: top;
 }
 
-#abundaCalcTbl tbody td.upc {
-	width:90px;
+#abundaCalcTbl tbody td.upc
+{
+    width: 90px;
 }
 
-#abundaCalcTbl tbody td.quantity {
-	width: 30px;
+#abundaCalcTbl tbody td.quantity
+{
+    width: 30px;
 }
 
-#abundaCalcTbl tbody td.item {
-	width: 80px;
+#abundaCalcTbl tbody td.item
+{
+    width: 80px;
 }
 
-#abundaCalcTbl tbody td.item div {
+#abundaCalcTbl tbody td.item div
+{
 }
 
-#abundaCalcTbl tbody td.values {
-	width:80px;
-	text-align: right;
+#abundaCalcTbl tbody td.values
+{
+    width: 80px;
+    text-align: right;
 }
 
-#abundaCalcTbl tbody td.delete {
-	width: 90px;
+#abundaCalcTbl tbody td.delete
+{
+    width: 90px;
 }
 
-.blatent {
-	color:Red;
-	font-weight: bold;
-	text-align:center;
+.blatent
+{
+    color: Red;
+    font-weight: bold;
+    text-align: center;
 }
 
-#abundaCalcTbl tfoot th 
+#abundaCalcTbl tfoot th
 {
     background: #0b5294;
-    border-left:0;
-    border-right:0;
+    border-left: 0;
+    border-right: 0;
     border-bottom: 1px solid silver;
-    height:24px;
-    padding:4px 5px 4px 5px;
-    color:white;
-    font-weight:bold;
-    font-size:18px;
-    text-align:left;
+    height: 24px;
+    padding: 4px 5px 4px 5px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    text-align: left;
 }
 
-#abundaCalcTbl tfoot th a {
-	text-decoration:none;
-	color:#fcf802;
-	font-size:16px;
-	font-weight:bold;
-	
-}
-
-#abundaCalcTbl tfoot th a:hover {
-	text-decoration: none;
-	color:Aqua;
-	font-size:16px;
-	font-weight:bold;
-}
-
-#abundaCalcTbl thead th 
+#abundaCalcTbl tfoot th a
 {
-    background:#0b5294;
-    height:35px;
+    text-decoration: none;
+    color: #fcf802;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+#abundaCalcTbl tfoot th a:hover
+{
+    text-decoration: none;
+    color: Aqua;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+#abundaCalcTbl thead th
+{
+    background: #0b5294;
+    height: 35px;
     border-bottom: 1px solid silver;
-    border-right:0;
-    border-left:0;
+    border-right: 0;
+    border-left: 0;
     padding: 6px 5px 2px 5px;
     color: White;
     font-weight: bold;
-	font-size:16px;
-	text-align: center;
+    font-size: 16px;
+    text-align: center;
 }
 
-#abundaCalcTbl thead th.delete 
+#abundaCalcTbl thead th.delete
 {
     text-align: right;
-	color:#030;
+    color: #030;
 }
 
-#abundaCalcTbl thead th a:hover {
-	text-decoration: none;
-	color:Aqua;
-	font-size: 16px;
-	font-weight: bold;
+#abundaCalcTbl thead th a:hover
+{
+    text-decoration: none;
+    color: Aqua;
+    font-size: 16px;
+    font-weight: bold;
 }
 
-#abundaCalcTbl thead th a 
+#abundaCalcTbl thead th a
 {
     text-decoration: none;
     color: #fcf802;
@@ -359,84 +393,168 @@
 	Impromptu
 ------------------------------
 */
-.jqifade{
-	position: absolute; 
-	background-color: #777777; 
+.jqifade
+{
+    position: absolute;
+    background-color: #777777;
 }
-div.jqi{ 
-	width: 400px; 
-	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif; 
-	position: absolute; 
-	background-color: #ffffff; 
-	font-size: 11px; 
-	text-align: left; 
-	border: solid 1px #eeeeee;
-	border-radius: 10px;
-	-moz-border-radius: 10px;
-	-webkit-border-radius: 10px;
-	padding: 7px;
+div.jqi
+{
+    width: 400px;
+    font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
+    position: absolute;
+    background-color: #ffffff;
+    font-size: 11px;
+    text-align: left;
+    border: solid 1px #eeeeee;
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    padding: 7px;
 }
-div.jqi .jqicontainer{ 
+div.jqi .jqicontainer
+{
 }
-div.jqi .jqiclose{ 
-	position: absolute;
-	top: 4px; right: -2px; 
-	width: 18px; 
-	cursor: default; 
-	color: #bbbbbb; 
-	font-weight: bold; 
+div.jqi .jqiclose
+{
+    position: absolute;
+    top: 4px;
+    right: -2px;
+    width: 18px;
+    cursor: default;
+    color: #bbbbbb;
+    font-weight: bold;
 }
-div.jqi .jqititle{
-	padding: 5px 10px;
-	font-size: 16px; 
-	line-height: 20px; 
-	border-bottom: solid 1px #eeeeee;
+div.jqi .jqititle
+{
+    padding: 5px 10px;
+    font-size: 16px;
+    line-height: 20px;
+    border-bottom: solid 1px #eeeeee;
 }
-div.jqi .jqimessage{ 
-	padding: 10px; 
-	line-height: 20px; 
-	color: #444444; 
+div.jqi .jqimessage
+{
+    padding: 10px;
+    line-height: 20px;
+    color: #444444;
 }
-div.jqi .jqibuttons{ 
-	text-align: right; 
-	padding: 5px 0 5px 0; 
-	border: solid 1px #eeeeee; 
-	background-color: #f4f4f4;
+div.jqi .jqibuttons
+{
+    text-align: right;
+    padding: 5px 0 5px 0;
+    border: solid 1px #eeeeee;
+    background-color: #f4f4f4;
 }
-div.jqi button{ 
-	padding: 3px 10px; 
-	margin: 0 10px; 
-	background-color: #2F6073; 
-	border: solid 1px #f4f4f4; 
-	color: #ffffff; 
-	font-weight: bold; 
-	font-size: 12px; 
+div.jqi button
+{
+    padding: 3px 10px;
+    margin: 0 10px;
+    background-color: #2F6073;
+    border: solid 1px #f4f4f4;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 12px;
 }
-div.jqi button:hover{ 
-	background-color: #728A8C;
+div.jqi button:hover
+{
+    background-color: #728A8C;
 }
-div.jqi button.jqidefaultbutton{
-	background-color: #BF5E26;
+div.jqi button.jqidefaultbutton
+{
+    background-color: #BF5E26;
 }
-.jqiwarning .jqi .jqibuttons{ 
-	background-color: #BF5E26;
+.jqiwarning .jqi .jqibuttons
+{
+    background-color: #BF5E26;
 }
 
-.jqi .jqiarrow{ position: absolute; height: 0; width:0; line-height: 0; font-size: 0; border: solid 10px transparent;}
+.jqi .jqiarrow
+{
+    position: absolute;
+    height: 0;
+    width: 0;
+    line-height: 0;
+    font-size: 0;
+    border: solid 10px transparent;
+}
 
-.jqi .jqiarrowtl{ left: 10px; top: -20px; border-bottom-color: #ffffff; }
-.jqi .jqiarrowtc{ left: 50%; top: -20px; border-bottom-color: #ffffff; margin-left: -10px; }
-.jqi .jqiarrowtr{ right: 10px; top: -20px; border-bottom-color: #ffffff; }
+.jqi .jqiarrowtl
+{
+    left: 10px;
+    top: -20px;
+    border-bottom-color: #ffffff;
+}
+.jqi .jqiarrowtc
+{
+    left: 50%;
+    top: -20px;
+    border-bottom-color: #ffffff;
+    margin-left: -10px;
+}
+.jqi .jqiarrowtr
+{
+    right: 10px;
+    top: -20px;
+    border-bottom-color: #ffffff;
+}
 
-.jqi .jqiarrowbl{ left: 10px; bottom: -20px; border-top-color: #ffffff; }
-.jqi .jqiarrowbc{ left: 50%; bottom: -20px; border-top-color: #ffffff; margin-left: -10px; }
-.jqi .jqiarrowbr{ right: 10px; bottom: -20px; border-top-color: #ffffff; }
+.jqi .jqiarrowbl
+{
+    left: 10px;
+    bottom: -20px;
+    border-top-color: #ffffff;
+}
+.jqi .jqiarrowbc
+{
+    left: 50%;
+    bottom: -20px;
+    border-top-color: #ffffff;
+    margin-left: -10px;
+}
+.jqi .jqiarrowbr
+{
+    right: 10px;
+    bottom: -20px;
+    border-top-color: #ffffff;
+}
 
-.jqi .jqiarrowlt{ left: -20px; top: 10px; border-right-color: #ffffff; }
-.jqi .jqiarrowlm{ left: -20px; top: 50%; border-right-color: #ffffff; margin-top: -10px; }
-.jqi .jqiarrowlb{ left: -20px; bottom: 10px; border-right-color: #ffffff; }
+.jqi .jqiarrowlt
+{
+    left: -20px;
+    top: 10px;
+    border-right-color: #ffffff;
+}
+.jqi .jqiarrowlm
+{
+    left: -20px;
+    top: 50%;
+    border-right-color: #ffffff;
+    margin-top: -10px;
+}
+.jqi .jqiarrowlb
+{
+    left: -20px;
+    bottom: 10px;
+    border-right-color: #ffffff;
+}
 
-.jqi .jqiarrowrt{ right: -20px; top: 10px; border-left-color: #ffffff; }
-.jqi .jqiarrowrm{ right: -20px; top: 50%; border-left-color: #ffffff; margin-top: -10px; }
-.jqi .jqiarrowrb{ right: -20px; bottom: 10px; border-left-color: #ffffff; }
+.jqi .jqiarrowrt
+{
+    right: -20px;
+    top: 10px;
+    border-left-color: #ffffff;
+}
+.jqi .jqiarrowrm
+{
+    right: -20px;
+    top: 50%;
+    border-left-color: #ffffff;
+    margin-top: -10px;
+}
+.jqi .jqiarrowrb
+{
+    right: -20px;
+    bottom: 10px;
+    border-left-color: #ffffff;
+}
 
