--- a/themes/gadget.css
+++ b/themes/gadget.css
@@ -3,3 +3,53 @@
     
     margin-bottom: 10px;
 }
+
+.select_container {
+    width:100%;
+    float:left;
+    height:75px;
+}
+
+.description_container {
+    width:100%;
+    float:left;
+    height:100px;
+}
+
+.large_container {
+    width:100%;
+    float:left;
+    height:75px;
+}
+
+.sel_left {
+    float:left;
+}
+
+.sel_center {
+    margin:auto;
+}
+
+.selection {
+    width:25%;
+    margin:auto;
+    position:relative;
+    height:100%;
+}
+    .selection p {
+        text-align: center;
+    }
+
+    .selection select {
+        width:90%;
+        position:absolute;
+        left:5%;
+    }
+    .selection h1 {
+        text-align:center;
+    }
+
+    .selection textarea {
+        width:100%;
+        height:100%;
+    }
