--- a/themes/gadget.css
+++ b/themes/gadget.css
@@ -4,6 +4,10 @@
     margin-bottom: 10px;
 }
 
+.bad_input {
+    border-color:red;
+}
+
 .select_container {
     width:100%;
     float:left;
@@ -13,7 +17,8 @@
 .description_container {
     width:100%;
     float:left;
-    height:100px;
+    height:200px;
+    display:none;
 }
 
 .large_container {
@@ -29,6 +34,24 @@
 .sel_center {
     margin:auto;
 }
+
+.box_center {
+    width:75%;
+    margin:auto;
+    position:relative;
+    height:100%;
+}
+
+    .box_center p {
+        height:10%;
+        width:100%;
+        margin-bottom:0px;
+    }
+
+    .box_center textarea {
+        width:100%;
+        height:75%;
+    }
 
 .selection {
     width:25%;
@@ -49,7 +72,28 @@
         text-align:center;
     }
 
-    .selection textarea {
-        width:100%;
-        height:100%;
-    }
+.contact_form_thirds {
+    float:left;
+    width:32%;
+    margin-top:25px;
+}
+
+.contact_form_container input {
+    width:90%;
+}
+
+.contact_form_center {
+    width:32%;
+    margin:auto;
+    margin-top:25px;
+}
+
+.contact_form_container {
+    width:100%;
+    float:left;
+    height:75px;
+}
+
+.required {
+    color:red;
+}
