--- a/themes/classic.css
+++ b/themes/classic.css
@@ -773,7 +773,17 @@ SECTION 3 & 4 - Table
     background: white;
     left: 207px;
     top: 69px;
-    width: auto;
+    width: 100%;
+    height:auto;
+    display:none;
+}
+
+.searchHeader {
+    background-color:#6699ff;
+    color:#ffffff;
+    border:#cccccc 1px solid;
+    font-weight:bold;
+    font-size:15px;
 }
 
 .search_results_li {
@@ -790,13 +800,17 @@ SECTION 3 & 4 - Table
         font-size: 15px;
     }
 
+.inlineblock {
+    display:inline-block;
+    padding-left:5px;
+}
+
 .search_result_row {
     background-color: #ffffff;
     color: #333333;
     border-left: #cccccc 1px solid;
     border-right: #cccccc 1px solid;
     border-bottom: #cccccc 1px solid;
-    width:100%;
 }
 
     .search_results_li :hover {
